--- a/cli/src/app/features/chat/chat.component.html
+++ b/cli/src/app/features/chat/chat.component.html
@@ -69,8 +69,7 @@
 
       <!-- Private Chat Mode -->
       <div *ngIf="chatMode === 'private'" class="h-full p-4">
-        <app-private-chat-sidebar [listFriends]="getFriendsList()" [searchTerm]="searchPrivateChatTerm"
-          (searchChanged)="searchPrivateChatTerm = $event">
+        <app-private-chat-sidebar [searchTerm]="searchPrivateChatTerm" (searchChanged)="searchPrivateChatTerm = $event">
         </app-private-chat-sidebar>
       </div>
 
