--- a/cli/src/app/features/admin/dashboard/dashboard.component.html
+++ b/cli/src/app/features/admin/dashboard/dashboard.component.html
@@ -119,7 +119,7 @@
         <div 
           *ngFor="let value of userGrowthData.datasets[0]?.data; let i = index"
           class="bg-blue-500 rounded-t-sm flex-1 opacity-80 hover:opacity-100 transition-opacity"
-          [style.height.px]="(value / Math.max(...userGrowthData.datasets[0].data)) * 200"
+          [style.height.px]="calculateBarHeight(value, userGrowthData.datasets[0].data)"
           [title]="userGrowthData.labels[i] + ': ' + value + ' users'">
         </div>
       </div>
@@ -143,7 +143,7 @@
         <div 
           *ngFor="let value of revenueData.datasets[0]?.data; let i = index"
           class="bg-emerald-500 rounded-t-sm flex-1 opacity-80 hover:opacity-100 transition-opacity"
-          [style.height.px]="(value / Math.max(...revenueData.datasets[0].data)) * 200"
+          [style.height.px]="calculateBarHeight(value, revenueData.datasets[0].data)"
           [title]="revenueData.labels[i] + ': ' + (value | currency:'VND':'symbol':'1.0-0')">
         </div>
       </div>
